--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
 body {
 	font-family: 'Quicksand', serif;
 }
-
+img{
+	border: 1px solid black;
+	border-radius: 50%;
+	max-width=100px;
+	max-height=100px;
+}
 .header {
 	text-align: center;
 	padding-top: 2%;
