--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,16 @@
 body {
 	font-family: 'Quicksand', serif;
 }
-img{
+.profile_image {
 	border: 1px solid black;
 	border-radius: 50%;
 	max-width: 200px;
 	max-height: 200px;
+}
+.project_image {
+	border: 1px solid black;
+	max-width: 400px;
+	max-height: 300px;
 }
 .header {
 	text-align: center;
