--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@ body {
 	border-radius: 50%;
 	max-width: 200px;
 	max-height: 200px;
+	display: block;
+	margin: auto;
 }
 .project_image {
 	border: 1px solid black;
